add review-seciton class style

--- a/style.css
+++ b/style.css
@@ -12,25 +12,22 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center; 
-    height: 50vh;  
+    height: 70vh;  
     color: white;
 } 
 .container {
     background-color: rgba(0, 0, 0, 50%);
-    height: 50vh;
+    height: 70vh;
 }
 .daily-task {
     width: 50%;
-    background-color: rgba(0, 0, 0, 70%);
+    background-color: rgba(0, 0, 0, 75%);
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 50px 0px 50px 30px;   
-}
-.daily-task h1 {
-    font-weight: bold;
-    font-size: 40px; 
+    padding: 50px 0px 50px 30px;  
+    position: relative; 
 }
 .daily-task input {
     background-color: transparent;
@@ -38,9 +35,9 @@ body {
     border: none;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3); 
     outline: none;
-    width: 70%;
+    width: 80%;
     margin: 10px 0;
-    padding: 10px 0; 
+    padding: 10px 0;  
 }
 .daily-task input:focus {
     box-shadow: rgba(99, 99, 99, 0.4) 0px 2px 8px 0px;
@@ -51,12 +48,29 @@ body {
     border: none;
     color: white;
     padding: 10px;
-    width: 70%;
+    width: 80%;
     margin-top: 20px;
     border-radius: 5px;
+    margin-bottom: 3rem;
 }
 .add-task-btn:hover {
     transition: all 0.5s;
     box-shadow: rgba(99, 99, 99, 0.4) 0px 2px 8px 0px;
     background-color: #1d4f4cc7;
+}
+.date-todo {
+    text-align: end;
+    position: absolute;
+    right: 2rem;
+    bottom: 1rem;
+    font-size: 12px; 
+}
+.review-section {
+    background-color: #B5AA9E;
+    height: 50vh;
+    color: #542C08; 
+    padding: 50px 0px 50px 30px;
+}
+.review-section li {
+    list-style-type: none;
 }
