--- a/style.css
+++ b/style.css
@@ -77,9 +77,8 @@ body {
   font-size: 12px;
 }
 .review-section {
-  /* height: 50vh; */
   color: #542c08;
-  padding: 50px 0px 50px 30px;
+  padding: 50px 0px 50px 50px;
 }
 .review-section h2 {
   font-size: 40px;
@@ -90,7 +89,7 @@ body {
 
 /* TASK */
 .add-task-ul .taskItem {
-  /* width: 90%; */
+  width: 90%;
   /* height: 100px; */
   display: flex;
   /* gap: 3rem; */
@@ -104,6 +103,7 @@ body {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  width: 20%;
 }
 /* LEFT DIV */
 .left-div {
