--- a/style.css
+++ b/style.css
@@ -91,8 +91,8 @@ body {
 }
 /* TASK */
 .add-task-ul .taskItem {
-  width: 90%; 
-  display: flex; 
+  width: 90%;
+  display: flex;
   margin-top: 30px;
   margin-bottom: 30px;
   border-bottom: 5px solid rgba(84, 43, 8, 0.5);
@@ -225,14 +225,16 @@ li.checked .edit-icon-description {
 @media screen and (max-width: 750px) {
   .create-todo h1 {
     font-size: 1.3rem;
-  } 
-  .errorBox {  
-    font-size: .7rem; 
   }
-  .add-task-btn {    
-    font-size: .7rem;
+  .errorBox {
+    font-size: 0.7rem;
+  }
+  .add-task-btn {
+    font-size: 0.7rem;
+    padding: 5px; 
+    margin-top: 10px;
   }
   .daily-task input {
-    font-size: .7rem;
+    font-size: 0.5rem;
   }
 }
