--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 .daily-task {
   width: 50%;
-  max-width: 80%;
+  /* max-width: 80%; */
   background-color: rgba(0, 0, 0, 75%);
   height: 100%;
   display: flex;
